--- a/style.css
+++ b/style.css
@@ -1,18 +1,23 @@
-div.bloc1{
-    color: red;
-    background-color: aqua;
-}
-div.bloc2{
-    color: green;
-    background-color: yellow;
-}
-div.bloc3{
-    color: blue;
-    background-color: orange;
-}
+
 span.hola {
     background-color: yellow;
 }
 span.bon {
     background-color: red;
+}
+
+div.bloc{
+    background-color: yellow;
+    border: 1px solid red;
+    width: 250px;
+    height: 100px;
+    display: inline-block;
+}
+p.azul{
+    color: blue;
+}
+
+span.dissabtes{
+    color: red;
+    font-weight: bold;
 }
